--- a/package.json
+++ b/package.json
@@ -14,9 +14,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/next-redux-wrapper": "^2.0.2",
+    "@types/react-redux": "^7.1.2",
+    "@types/redux": "^3.6.0",
     "next": "^9.0.6",
+    "next-redux-wrapper": "^3.0.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^12.7.5",
