--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "node ./scripts/start.js",
     "build": "next build",
     "start": "next start",
     "prestart:prod": "npm run build",
@@ -14,9 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/next-redux-wrapper": "^2.0.2",
     "@types/react-redux": "^7.1.2",
     "@types/redux": "^3.6.0",
+    "axios": "^0.19.0",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^0.20.0",
+    "morgan": "^1.9.1",
     "next": "^9.0.6",
     "next-redux-wrapper": "^3.0.0",
     "react": "^16.9.0",
