--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node ./scripts/start.js",
+    "test": "jest --config=jest.config.js",
     "build": "next build",
     "start": "next start",
     "prestart:prod": "npm run build",
@@ -14,13 +15,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/preset-typescript": "^7.6.0",
     "@types/axios": "^0.14.0",
     "@types/next-redux-wrapper": "^2.0.2",
     "@types/react-redux": "^7.1.2",
     "@types/redux": "^3.6.0",
     "axios": "^0.19.0",
+    "babel-jest": "^24.9.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.20.0",
+    "jest": "^24.9.0",
     "morgan": "^1.9.1",
     "next": "^9.0.6",
     "next-redux-wrapper": "^3.0.0",
