--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,6 +1,6 @@
 name: Node CI
 
-on: commit
+on: pull_request
 
 jobs:
   test:
@@ -12,7 +12,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
-      - name: npm install, build, and test
+      - name: npm install, and test
         run: |
           npm install
           npm run test
