--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-jest": "^24.9.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.20.0",
+    "immer": "^4.0.0",
     "jest": "^24.9.0",
     "morgan": "^1.9.1",
     "next": "^9.0.6",
