--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.18",
     "@types/next-redux-wrapper": "^2.0.2",
+    "@types/react-dom": "^16.9.2",
     "@types/react-redux": "^7.1.2",
     "@types/redux": "^3.6.0",
     "axios": "^0.19.0",
@@ -34,8 +35,8 @@
     "morgan": "^1.9.1",
     "next": "^9.1.1",
     "next-redux-wrapper": "^4.0.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1"
@@ -43,7 +44,7 @@
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@types/node": "^12.7.5",
-    "@types/react": "^16.9.2",
+    "@types/react": "^16.9.9",
     "typescript": "^3.6.3"
   }
 }
